test/compile_fail/if_then_not_unit.pine
def main do
  if true then
    42 # error: failed to unify
  end
end
